deploy/resources/generation/resources/generation/resources/generation/resources/generation/sas-bases/components/security/network/route.openshift.io/route/front-door-tls/sas-certframe-transformers.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-certframe-route-edge-tls-transformer
patch: |-
  - op: replace
    path: /spec/tls
    value:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
  - op: replace
    path: /metadata/annotations/cert-utils-operator.redhat-cop.io~1certs-from-secret
    value: sas-ingress-certificate
target:
  kind: Route
